@@ -1,6 +1,13 @@
 ﻿以下功能暂时不可用：
 1、出兵
 
+-= Stran 1.2.3 [GoldenPhoenix] 发布 =-
+- 添加了新增田(7田等)的数据
+- 修正了建造队列不按顺序造建筑的问题
+- 修正了造兵显示不正确的问题
+- 修正了不能取消拆除的问题
+- 取消建造现在应该能用了 (1.2.2里加入的，漏写了)
+
 -= Stran 1.2.2 [GoldenPhoenix] 发布 =-
 - 可在游戏中设置新的主村
 - 修正了升级兵种探测的问题 (我想杀人……)
